Added moment for formating dates.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -61,8 +61,8 @@
         <h1>Temperature & Humidity</h1>
 	</div>
 	<div class="column small-12">
-	    <canvas id="temperatureChart" width="1000px" height="200px"></canvas>
-<canvas id="humidityChart" width="1000px" height="200px"></canvas>
+	    <canvas class="c_chart" id="temperatureChart" height="200" width="960"></canvas>
+<canvas class="c_chart" id="humidityChart" height="200" width="960"></canvas>
 
 	</div>
 </div>
