--- a/webroot/index.html
+++ b/webroot/index.html
@@ -56,9 +56,11 @@
 <body>
 
 <div class="main-container">
-    <header class="c_row">
-	<div class="column small-12 text-center">
-        <h1>Dashboard</h1>
+    <header class="c_row full-width">
+	<div class="c_row">
+		<div class="column small-12 text-center">
+			<h1>Dashboard</h1>
+		</div>
 	</div>
 </header>
 
@@ -76,11 +78,12 @@
 
 <section class="c_row" id="graphMeasures">
 	<div class="column small-12">
-		<div class="c_chart-container">
-	<h2>Temperature</h2>
+		<h2>Temperature</h2>
+<div class="c_chart-container">
 	<canvas class="c_chart" id="temperatureChart" height="400" width="1500"></canvas>
-
-	<h2>Humidity</h2>
+</div>
+<h2>Humidity</h2>
+<div class="c_chart-container">
 	<canvas class="c_chart" id="humidityChart" height="400" width="1500"></canvas>
 </div>
 
