put chart-logic in c_chart.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -80,11 +80,11 @@
 	<div class="column small-12">
 		<h2>Temperature</h2>
 <div class="c_chart-container">
-	<canvas class="c_chart" id="temperatureChart" height="400" width="1500"></canvas>
+	<canvas class="c_chart" data-c-chart id="temperatureChart" height="400" width="1500"></canvas>
 </div>
 <h2>Humidity</h2>
 <div class="c_chart-container">
-	<canvas class="c_chart" id="humidityChart" height="400" width="1500"></canvas>
+	<canvas class="c_chart" data-c-chart id="humidityChart" height="400" width="1500"></canvas>
 </div>
 
 	</div>
